Update Theming options

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
 
     <!-- THEME BAR -->
     <div class="theme-bar d-flex justify-content-sm-end p-4">
+      <button onclick="defaultMode()" class="default-button" title="Click to toggle default mode">
+        <i class="fa fa-solid fa-user"></i>
+        <span>Default Theme</span>
+      </button>
+      &nbsp;
       <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
-        <i class="fa fa-solid fa-circle-half-stroke"></i>
+        <i class="fa fa-solid fa-moon"></i>
         <span>Dark Mode</span>
       </button>
       &nbsp;
