Update Theming options

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
   <body id="bg-picker" class="default-bg">
 
     <!-- THEME BAR -->
-    <div class="theme-bar d-flex justify-content-sm-end p-4">
-      <button onclick="defaultMode()" class="default-button" title="Click to toggle default mode">
-        <i class="fa fa-solid fa-user"></i>
-        <span>Default Theme</span>
+    <div class="theme-bar d-flex justify-content-center justify-content-md-end pt-3 px-3 text-center lh-sm">
+      <button onclick="defaultMode()" class="default-button p-0 mx-1" title="Click to toggle default mode">
+        <i class="fa fa-solid fa-house-chimney d-block d-sm-inline"></i>
+        <p class="small py-1 active">Default Theme</p>
       </button>
       &nbsp;
-      <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
-        <i class="fa fa-solid fa-moon"></i>
-        <span>Dark Mode</span>
+      <button onclick="darkMode()" class="dark-button p-0 mx-1" title="Click to toggle dark mode">
+        <i class="fa fa-solid fa-moon d-block d-sm-inline"></i>
+        <p class="small py-1">Dark Theme</p>
       </button>
       &nbsp;
-      <button onclick="seasonalMode()" class="seasonal-button" title="Click to toggle seasonal theme">
-        <i class="fa fa-solid"></i>
-        <span>Seasonal Theme</span>
+      <button onclick="seasonalMode()" class="seasonal-button p-0 mx-1" title="Click to toggle seasonal theme">
+        <i class="fa fa-solid d-block d-sm-inline"></i>
+        <p class="small py-1">Seasonal Theme</p>
       </button>
       &nbsp;
     </div>
