Update Theming options

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
   <body id="bg-picker" class="default-bg">
 
     <!-- THEME BAR -->
-    <div class="theme-bar d-flex justify-content-center justify-content-md-end pt-3 px-3 text-center lh-sm">
-      <button onclick="defaultMode()" class="default-button p-0 mx-1" title="Click to toggle default mode">
+    <div class="theme-bar d-flex justify-content-center justify-content-md-end pt-4 px-4 text-center lh-sm">
+      <button onclick="defaultMode()" class="default-button px-2 py-0 mx-1" title="Click to toggle default mode">
         <i class="fa fa-solid fa-house-chimney d-block d-sm-inline"></i>
-        <p class="small py-1 active">Default Theme</p>
+        <p class="small py-1 active">Default</p>
       </button>
       &nbsp;
-      <button onclick="darkMode()" class="dark-button p-0 mx-1" title="Click to toggle dark mode">
+      <button onclick="darkMode()" class="dark-button px-2 py-0 mx-1" title="Click to toggle dark mode">
         <i class="fa fa-solid fa-moon d-block d-sm-inline"></i>
-        <p class="small py-1">Dark Theme</p>
+        <p class="small py-1">Dark</p>
       </button>
       &nbsp;
-      <button onclick="seasonalMode()" class="seasonal-button p-0 mx-1" title="Click to toggle seasonal theme">
+      <button onclick="seasonalMode()" class="seasonal-button px-2 py-0 mx-1" title="Click to toggle seasonal theme">
         <i class="fa fa-solid d-block d-sm-inline"></i>
-        <p class="small py-1">Seasonal Theme</p>
+        <p class="small py-1">Seasonal</p>
       </button>
       &nbsp;
     </div>
