--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
     <!-- FontAwesome -->
-    <link rel="stylesheet" href="assets/fontawesome/css/all.css" >    
+    <link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.css" >    
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
