--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
     <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/fontawesome-free-7.1.0-web/css/all.css" >    
 
     <!-- Styles -->
