--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.css" >    
+    <!--<link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.css" > -->
 
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
