--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </section>
 
       <footer class="col-12 col-lg-8 mx-auto text-center mt-4 mb-5 pb-5">
-        <p><em>I live, work, and play in Vancouver, BC, Canada on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></p>
+        <p><em>I live, work, and play in North Vancouver, BC, Canada on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></p>
       </footer>
 
     </div>
